--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-meta": "^1.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.1.8"
+    "vuetify": "^1.1.8",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
