--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "bop",
-  "version": "0.1.0",
-  "private": true,
+  "name": "blog",
+  "version": "3.0.0-alpha.1",
+  "description": "The BecauseOfProg's informatic blog.",
+  "homepage": "https://github.com/BecauseOfProg/blog#readme",
+  "license": "MIT",
+  "author": "Exybore",
+  "keywords": ["becauseofprog", "blog"],
+  "main": "src/main.js",
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/BecauseOfProg/blog.git"
+    }
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
