--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
   },
   "dependencies": {
     "register-service-worker": "^1.0.0",
-    "vue": "^2.5.16",
-    "vue-meta": "^1.5.2",
-    "vue-resource": "^1.5.1",
+    "vue": "^2.5.17",
+    "vue-meta": "^1.5.3",
+    "vue-resource": "^1.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.1.8",
+    "vuetify": "^1.1.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.0.0-beta.49",
-    "@mdi/font": "^2.5.94",
-    "@vue/cli-plugin-babel": "^3.0.0-rc.10",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.10",
-    "@vue/cli-service": "^3.0.0-rc.10",
+    "@babel/polyfill": "^7.0.0-rc.2",
+    "@mdi/font": "^2.6.95",
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.1",
+    "@vue/cli-plugin-pwa": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.1.6",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.17"
   }
 }
