--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,62 @@
 {
-  "name": "blog-4.0.0",
-  "short_name": "blog-4.0.0",
+  "short_name": "BecauseOfProg",
+  "name": "BecauseOfProg",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/img/manifest/images/logos/bop-512px.png",
+      "type": "image/png",
+      "sizes": "512x512"
     },
     {
-      "src": "./img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/img/manifest/images/logos/bop-192px.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-180px.png",
+      "type": "image/png",
+      "sizes": "180x180"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-152px.png",
+      "type": "image/png",
+      "sizes": "152x152"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-144px.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-120px.png",
+      "type": "image/png",
+      "sizes": "120x120"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-96px.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-76px.png",
+      "type": "image/png",
+      "sizes": "76x76"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-72px.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "/img/manifest/images/logos/bop-48px.png",
+      "type": "image/png",
+      "sizes": "48x48"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "/",
+  "background_color": "#f5f5f5",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "theme_color": "#CF0A1D",
+  "lang": "fr",
+  "description": "Blog d'actualités et de trouvailles de la BecauseOfProg"
 }
