--- a/package.json
+++ b/package.json
@@ -22,28 +22,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@mdi/font": "^3.6.95",
-    "core-js": "^2.6.5",
-    "moment": "^2.24.0",
-    "register-service-worker": "^1.6.2",
+    "@babel/polyfill": "^7.10.1",
+    "@mdi/font": "^5.3.45",
+    "core-js": "^3.6.5",
+    "github-markdown-css": "^4.0.0",
+    "moment": "^2.26.0",
+    "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.11",
+    "vue-markdown": "^2.2.4",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.3.2",
+    "vuetify": "^2.2.33",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-plugin-pwa": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "^4.4.1",
+    "@vue/cli-plugin-eslint": "^4.4.1",
+    "@vue/cli-plugin-pwa": "^4.4.1",
+    "@vue/cli-service": "^4.4.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-vue": "^6.2.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-template-compiler": "^2.6.11"
   }
 }
