--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "blog",
+  "private": true,
   "version": "4.0.0",
   "description": "💻 The BecauseOfProg's informatic blog.",
   "homepage": "https://github.com/BecauseOfProg/blog",
-  "license": "GPLv3",
+  "license": "GPL-v3",
   "author": "Exybore",
   "keywords": [
     "becauseofprog",
@@ -13,7 +14,7 @@
   "repositories": [
     {
       "type": "git",
-      "url": "git@github.com:BecauseOfProg/git"
+      "url": "git@github.com:BecauseOfProg/blog"
     }
   ],
   "scripts": {
@@ -32,15 +33,15 @@
     "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.3.2",
-    "vuetify": "^2.2.33",
+    "vue-router": "^3.3.3",
+    "vuetify": "^2.3.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.1",
-    "@vue/cli-plugin-eslint": "^4.4.1",
-    "@vue/cli-plugin-pwa": "^4.4.1",
-    "@vue/cli-service": "^4.4.1",
+    "@vue/cli-plugin-babel": "^4.4.4",
+    "@vue/cli-plugin-eslint": "^4.4.4",
+    "@vue/cli-plugin-pwa": "^4.4.4",
+    "@vue/cli-service": "^4.4.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "eslint-plugin-vue": "^6.2.2",
