--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
   "name": "blog",
-  "private": true,
   "version": "4.0.0",
+  "private": true,
   "description": "💻 The BecauseOfProg's informatic blog.",
-  "homepage": "https://github.com/BecauseOfProg/blog",
-  "license": "GPL-v3",
   "author": "Exybore",
-  "keywords": [
-    "becauseofprog",
-    "blog"
-  ],
-  "main": "src/main.js",
-  "repositories": [
-    {
-      "type": "git",
-      "url": "git@github.com:BecauseOfProg/blog"
-    }
-  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/**/*.json'"
   },
+  "main": "src/main.js",
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
     "@mdi/font": "^5.3.45",
@@ -31,6 +20,7 @@
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.3",
     "vue-markdown": "^2.2.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.3.3",
@@ -38,6 +28,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^1.0.0",
     "@vue/cli-plugin-babel": "^4.4.4",
     "@vue/cli-plugin-eslint": "^4.4.4",
     "@vue/cli-plugin-pwa": "^4.4.4",
@@ -47,7 +38,20 @@
     "eslint-plugin-vue": "^6.2.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "homepage": "https://github.com/BecauseOfProg/blog",
+  "keywords": [
+    "becauseofprog",
+    "blog"
+  ],
+  "license": "GPL-v3",
+  "repositories": [
+    {
+      "type": "git",
+      "url": "git@github.com:BecauseOfProg/blog"
+    }
+  ]
 }
