--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@mdi/font": "^5.5.55",
     "core-js": "^3.6.5",
     "github-markdown-css": "^4.0.0",
+    "markdown-it-vue": "^1.1.3",
     "moment": "^2.27.0",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "vue": "^2.6.12",
     "vue-i18n": "^8.21.1",
-    "vue-markdown": "^2.2.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.10",
