--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@mdi/font": "^5.5.55",
     "core-js": "^3.6.5",
     "github-markdown-css": "^4.0.0",
+    "luxon": "^1.25.0",
     "markdown-it-vue": "^1.1.3",
-    "moment": "^2.27.0",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "vue": "^2.6.12",
