--- a/package.json
+++ b/package.json
@@ -2,8 +2,19 @@
   "name": "blog",
   "version": "4.0.0",
   "private": true,
-  "description": "💻 The BecauseOfProg's informatic blog.",
-  "author": "Exybore",
+  "description": "💻 The BecauseOfProg's tech blog.",
+  "author": "BecauseOfProg",
+  "contributors": [
+    {
+      "name": "Théo Vidal",
+      "email": "theo@becauseofprog.fr",
+      "url": "https://github.com/theovidal"
+    },
+    {
+      "name": "Noéwen (kernoeb)",
+      "url": "https://github.com/kernoeb"
+    }
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -12,33 +23,33 @@
   },
   "main": "src/main.js",
   "dependencies": {
-    "@mdi/font": "^5.6.55",
-    "core-js": "^3.6.5",
+    "@mdi/font": "^5.9.55",
+    "core-js": "^3.8.3",
     "github-markdown-css": "^4.0.0",
-    "luxon": "^1.25.0",
-    "markdown-it-vue": "^1.1.4",
-    "register-service-worker": "^1.7.1",
+    "luxon": "^1.26.0",
+    "markdown-it-vue": "^1.1.6",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^2.6.12",
-    "vue-i18n": "^8.22.0",
+    "vue-i18n": "^8.22.4",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.4.6",
-    "vuetify": "^2.3.13",
-    "vuex": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
-    "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-plugin-eslint": "^4.5.7",
-    "@vue/cli-plugin-pwa": "^4.5.7",
-    "@vue/cli-service": "^4.5.7",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-pwa": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.11.0",
-    "eslint-plugin-vue": "^7.0.1",
+    "eslint": "^7.20.0",
+    "eslint-plugin-vue": "^7.6.0",
     "stylus": "^0.54.8",
-    "stylus-loader": "^3.0.2",
+    "stylus-loader": "3.0.2",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.12"
   },
   "homepage": "https://github.com/BecauseOfProg/blog",
