--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.4",
+    "vue-meta": "^2.4.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.4",
