--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.6.12",
     "vue-i18n": "^8.24.1",
     "vue-meta": "^2.4.0",
+    "vue-plausible": "^1.1.4",
     "vue-resource": "^1.5.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.6",
