--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "private": true,
   "description": "💻 The BecauseOfProg's tech blog.",
   "author": "BecauseOfProg",
@@ -16,43 +16,34 @@
     }
   ],
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/**/*.json'"
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview --port=3000"
   },
-  "main": "src/main.js",
   "dependencies": {
-    "@mdi/font": "^5.9.55",
-    "core-js": "^3.10.0",
-    "github-markdown-css": "^4.0.0",
-    "luxon": "^1.26.0",
-    "markdown-it-vue": "^1.1.6",
+    "@mdi/font": "^7.0.96",
+    "github-markdown-css": "^5.1.0",
+    "luxon": "^3.0.4",
+    "markdown-it-vue": "^1.1.7",
+    "plausible-tracker": "^0.3.8",
     "register-service-worker": "^1.7.2",
-    "roboto-fontface": "*",
-    "vue": "^2.6.12",
-    "vue-i18n": "^8.24.2",
+    "roboto-fontface": "^0.10.0",
+    "vue": "^2",
+    "vue-i18n": "^8",
     "vue-meta": "^2.4.0",
-    "vue-plausible": "^1.1.4",
-    "vue-resource": "^1.5.2",
-    "vue-router": "^3.5.1",
-    "vuetify": "^2.4.9",
-    "vuex": "^3.6.2"
+    "vue-resource": "^1.5.3",
+    "vue-router": "^3",
+    "vuetify": "^2.6.12",
+    "vuex": "^3"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^1.1.0",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-plugin-pwa": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.23.0",
-    "eslint-plugin-vue": "^7.8.0",
-    "stylus": "^0.54.8",
-    "stylus-loader": "3.0.2",
-    "vue-cli-plugin-i18n": "~2.0.3",
-    "vue-cli-plugin-vuetify": "^2.3.1",
-    "vue-template-compiler": "^2.6.12"
+    "@vitejs/plugin-vue2": "^2.0.0",
+    "prettier": "^2.7.1",
+    "sass": "~1.32",
+    "stylus": "^0.59.0",
+    "typescript": "^4.8.4",
+    "unplugin-vue-components": "^0.22.8",
+    "vite": "^3.1.8"
   },
   "homepage": "https://github.com/BecauseOfProg/blog",
   "keywords": [
