--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: '16.x'
-        
-    - run: npm build
+
+    - run: npm run build
     
     - uses: milanmk/actions-file-deployer@master
       with:
