--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         node-version: '16.x'
 
+    - run: npm install
     - run: npm run build
     
     - uses: milanmk/actions-file-deployer@master
