--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,6 +28,6 @@ jobs:
         remote-user: ${{ secrets.DEPLOY_USER }}
         remote-password: ${{ secrets.DEPLOY_PASSWORD }}
         remote-port: ${{ secrets.DEPLOY_PORT }}
-        remote-path: "public_html"
-        local-path: "dist"
+        remote-path: "/www/"
+        local-path: "./dist/"
         sync: 'full'
