--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
-  "name": "bop-nuxt",
-  "version": "1.0.0",
+  "name": "blog",
+  "version": "4.1.0",
   "private": true,
+  "description": "💻 The BecauseOfProg's tech blog.",
+  "author": "BecauseOfProg",
+  "contributors": [
+    {
+      "name": "Théo Vidal",
+      "email": "theo@becauseofprog.fr",
+      "url": "https://github.com/theovidal"
+    },
+    {
+      "name": "Noéwen (kernoeb)",
+      "url": "https://github.com/kernoeb"
+    },
+    {
+      "name": "Gildas GH",
+      "url": "https://github.com/Gildas-GH"
+    }
+  ],
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
