--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     }
   ],
   "scripts": {
-    "build": "nuxt2 build",
-    "dev": "nuxt2",
-    "generate": "nuxt2 generate",
+    "build": "nuxt build",
+    "dev": "nuxt",
+    "generate": "nuxt generate",
     "lint": "npm run lint:js",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lintfix": "npm run lint:js -- --fix",
@@ -42,7 +42,6 @@
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
     "@babel/eslint-parser": "7.22.15",
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-28244705.131ac01",
     "@nuxtjs/eslint-config": "11.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
     "@nuxtjs/vuetify": "1.12.3",
@@ -54,11 +53,6 @@
     "imagemin-mozjpeg": "9.0.0",
     "imagemin-pngquant": "9.0.2",
     "imagemin-svgo": "9.0.0",
-    "node-fetch-native": "^1.4.0",
-    "nuxi": "^3.8.4",
     "webpack": "4.47.0"
-  },
-  "overrides": {
-    "node-fetch": "npm:node-fetch-native@latest"
   }
 }
