--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-universal-nuxt": "^2.2.2",
     "nuxt": "2.17.1",
     "vue": "2.7.14",
+    "vue-plausible": "^1.3.2",
     "vue-server-renderer": "2.7.14",
     "vue-template-compiler": "2.7.14",
     "vuetify": "2.7.1"
@@ -44,6 +45,7 @@
     "@babel/eslint-parser": "7.22.15",
     "@nuxtjs/eslint-config": "11.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vuetify": "1.12.3",
     "core-js": "3.32.2",
     "eslint": "8.49.0",
