--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxt/content": "1.15.1",
     "@nuxt/http": "^0.6.4",
     "@nuxtjs/i18n": "7.3.1",
+    "@nuxtjs/sitemap": "github:nuxt-community/sitemap-module#feat/static-crawler",
     "cookie-universal-nuxt": "^2.2.2",
     "nuxt": "2.17.1",
     "vue": "2.7.14",
