--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,7 +5,7 @@ name: Build & Deploy
 
 on:
   push:
-    branches: [ "main", "nuxt2" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -13,10 +13,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
       - uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-
-      - run: npm install
+          cache: 'npm'
+      - run: npm ci
       - run: npm run generate
+      - uses: milanmk/actions-file-deployer@master
+        with:
+            remote-host: ${{ secrets.DEPLOY_HOST }}
+            remote-user: ${{ secrets.DEPLOY_USER }}
+            remote-password: ${{ secrets.DEPLOY_PASSWORD }}
+            remote-port: ${{ secrets.DEPLOY_PORT }}
+            remote-path: "/www"
+            local-path: "./dist/"
+            sync: 'full'
+
