--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
     "@babel/eslint-parser": "7.22.15",
+    "@mdi/js": "^7.2.96",
     "@nuxtjs/eslint-config": "11.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vuetify": "1.12.3",
     "core-js": "3.32.2",
