--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "npm run lint:js",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lintfix": "npm run lint:js -- --fix",
-    "start": "nuxt2 start"
+    "start": "nuxt start"
   },
   "dependencies": {
     "@nuxt/content": "1.15.1",
