--- a/package.json
+++ b/package.json
@@ -30,35 +30,35 @@
   },
   "dependencies": {
     "@nuxt/content": "1.15.1",
-    "@nuxt/http": "^0.6.4",
+    "@nuxt/http": "0.6.4",
     "@nuxtjs/i18n": "7.3.1",
     "@nuxtjs/sitemap": "github:nuxt-community/sitemap-module#feat/static-crawler",
-    "cookie-universal-nuxt": "^2.2.2",
+    "cookie-universal-nuxt": "2.2.2",
     "nuxt": "2.17.1",
     "vue": "2.7.14",
-    "vue-plausible": "^1.3.2",
+    "vue-plausible": "1.3.2",
     "vue-server-renderer": "2.7.14",
     "vue-template-compiler": "2.7.14",
     "vuetify": "2.7.1"
   },
   "devDependencies": {
-    "@aceforth/nuxt-optimized-images": "^1.4.0",
+    "@aceforth/nuxt-optimized-images": "1.4.0",
     "@babel/eslint-parser": "7.22.15",
-    "@mdi/js": "^7.2.96",
+    "@mdi/js": "7.2.96",
     "@nuxtjs/eslint-config": "11.0.0",
     "@nuxtjs/eslint-module": "3.1.0",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/google-fonts": "3.0.2",
+    "@nuxtjs/pwa": "3.3.5",
     "@nuxtjs/vuetify": "1.12.3",
     "core-js": "3.32.2",
     "eslint": "8.50.0",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-vue": "9.17.0",
-    "hookable": "^5.5.3",
+    "hookable": "5.5.3",
     "imagemin-mozjpeg": "9.0.0",
     "imagemin-pngquant": "9.0.2",
     "imagemin-svgo": "9.0.0",
-    "remark-breaks": "^2.0.2",
+    "remark-breaks": "2.0.2",
     "webpack": "4.47.0"
   }
 }
