--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,5 +30,5 @@ jobs:
             remote-port: ${{ secrets.DEPLOY_PORT }}
             remote-path: "/www"
             local-path: "./dist/"
-            sync: 'delta'
+            sync: "full"
 
