--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nuxtjs/sitemap": "github:nuxt-community/sitemap-module#feat/static-crawler",
     "cookie-universal-nuxt": "2.2.2",
     "nuxt": "2.17.3",
+    "remark-gfm": "^1.0.0",
     "vue": "2.7.16",
     "vue-plausible": "1.3.2",
     "vue-server-renderer": "2.7.16",
@@ -58,7 +59,9 @@
     "imagemin-mozjpeg": "9.0.0",
     "imagemin-pngquant": "9.0.2",
     "imagemin-svgo": "9.0.0",
+    "rehype-katex": "^4.0.0",
     "remark-breaks": "2.0.2",
+    "remark-math": "^4.0.0",
     "webpack": "4.47.0"
   }
 }
